--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,255 @@
-.App {
-  text-align: center;
+:root {
+  --bg-primary: #f5f5ef;
+  --primary-color: #336699;
+  --white: #ffffff;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  color: #000000;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+a {
+  text-decoration: none !important;
+  outline: none;
+  font-weight: bold;
+  color: var(--primary-color) !important;
+}
+button {
+  outline: none !important;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* /////////UTILITIES////////// */
+.button {
+  border: none;
+  outline: none;
+  width: 250px;
+  padding: 5px 10px;
+  margin-top: 20px;
+  background: var(--primary-color);
+  color: var(--white);
+}
+
+.button-disabled {
+  background: #adbfd0;
+  color: var(--white);
+}
+.progress-line {
+  background-color: #d8d8d8;
+  position: relative;
+  margin-bottom: 10px;
+  margin-left: 2px;
+  height: 15px;
+  width: 60%;
+}
+.progress-done {
+  background: #e88302;
+  color: #fff;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100%;
+  width: 0;
+  opacity: 0;
+}
+.link-btn {
+  background: none;
+  border: none;
+  color: var(--primary-color);
+  font-weight: 600;
+  margin: 0 0 15px -80px;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 15px;
+}
+.link-btn-light {
+  background: none;
+  border: none;
+  color: #000000;
+  font-weight: 400;
+  margin: 0 0 15px -80px;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 15px;
+}
+.checkbox {
+  display: flex;
+  flex-direction: row;
+  position: relative;
+  margin-left: 20px;
+  cursor: pointer;
+  font-size: 18px;
+  line-height: 24px;
+  height: 24px;
+  width: 24px;
+  clear: both;
 }
 
-.App-link {
-  color: #61dafb;
+.checkbox input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+.checkbox label {
+  margin-left: 40px;
+  font-size: 14px;
+}
+.checkbox .checkbox-custom {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  height: 24px;
+  width: 24px;
+  background-color: transparent;
+  border-radius: 5px;
+  border: 2px solid #000000;
+}
+.checkbox input:checked ~ .checkbox-custom {
+  background-color: transparent;
+  border-radius: 5px;
+  -webkit-transform: rotate(0deg) scale(1);
+  -ms-transform: rotate(0deg) scale(1);
+  transform: rotate(0deg) scale(1);
+  opacity: 1;
+  border: 2px solid #000000;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.checkbox .checkbox-custom::after {
+  position: absolute;
+  content: "";
+  left: 12px;
+  top: 12px;
+  height: 0px;
+  width: 0px;
+  border-radius: 5px;
+  border: solid #000000;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(0deg) scale(0);
+  -ms-transform: rotate(0deg) scale(0);
+  transform: rotate(0deg) scale(0);
+  opacity: 1;
+}
+
+.checkbox input:checked ~ .checkbox-custom::after {
+  -webkit-transform: rotate(45deg) scale(1);
+  -ms-transform: rotate(45deg) scale(1);
+  transform: rotate(45deg) scale(1);
+  opacity: 1;
+  left: 8px;
+  top: 3px;
+  width: 6px;
+  height: 12px;
+  border: solid #000000;
+  border-width: 0 2px 2px 0;
+  background-color: transparent;
+  border-radius: 0;
+}
+
+.range-slider {
+  width: 100%;
+  display: flex;
+  margin-top: -30px;
+  padding: 0 20px;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.range-move-btn {
+  border: none;
+  outline: none;
+  background: none;
+  margin-top: 30px;
+  padding: 0;
+  font-size: 13px;
+  color: var(--primary-color);
+}
+
+.range-move-btn span {
+  font-weight: bold;
+  font-size: 30px;
+  margin-bottom: -30px;
+}
+.range-slider input[type="range"] {
+  margin-top: -20px;
+  width: 100%;
+  background: var(--white);
+  padding: 2px 0;
+  box-shadow: 3px 2px 8px 0px rgba(50, 53, 50, 0.52);
+}
+input[type="radio"] {
+  -moz-appearance: checkbox;
+}
+.range-input {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 2px;
+  outline: none;
+  background: var(--white);
+  border-radius: 20px;
+}
+.range-input::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  background: #4caf50;
+  cursor: pointer;
+}
+
+.range-input::-moz-range-thumb {
+  width: 15px;
+  height: 15px;
+  background: #ffffff;
+  cursor: pointer;
+  border: 1px solid var(--primary-color);
+  border-radius: 50%;
+}
+.range-input::-moz-range-progress {
+  background: var(--primary-color);
+  height: 5px;
+  border-radius: 50px;
+}
+.simplebar-scrollbar::before {
+  background-color: var(--primary-color) !important;
+}
+.modal-border-radius div {
+  border-radius: 20px !important;
+}
+
+.modal p {
+  font-size: 12px;
+}
+.modal-header .modal-title {
+  font-size: 16px;
+}
+
+.modal-body button {
+  outline: none;
+  width: 200px;
+  padding: 5px 10px;
+  margin-top: 20px;
+  color: var(--white);
+  font-size: 10px;
+  border-radius: 0px;
+}
+
+@media screen and (max-width: 500px) {
+  .progress-line {
+    width: 100% !important;
   }
-  to {
-    transform: rotate(360deg);
+  .button {
+    margin-right: 0;
+  }
+}
+@media screen and (max-width: 768px) {
+  .progress-line {
+    width: 137%;
+  }
+  .button {
+    margin-right: 0;
   }
 }
