--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,11 @@
   padding: 0;
   box-sizing: border-box;
 }
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
 body {
   color: #000000;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -17,8 +22,7 @@ body {
 a {
   text-decoration: none !important;
   outline: none;
-  font-weight: bold;
-  color: var(--primary-color) !important;
+  color: var(--primary-color);
 }
 button {
   outline: none !important;
@@ -32,12 +36,13 @@ button {
   padding: 5px 10px;
   margin-top: 20px;
   background: var(--primary-color);
-  color: var(--white);
+  color: var(--white) !important;
+  text-align: center;
 }
 
 .button-disabled {
   background: #adbfd0;
-  color: var(--white);
+  color: var(--white) !important;
 }
 .progress-line {
   background-color: #d8d8d8;
@@ -70,8 +75,18 @@ button {
 .link-btn-light {
   background: none;
   border: none;
-  color: #000000;
+  color: #000000 !important;
   font-weight: 400;
+  margin: 0 0 15px -80px;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 15px;
+}
+.link-btn-success {
+  background: none;
+  border: none;
+  color: var(--primary-color);
+  font-weight: bold;
   margin: 0 0 15px -80px;
   text-align: center;
   text-transform: uppercase;
