--- a/src/components/login_register/login.css
+++ b/src/components/login_register/login.css
@@ -5,6 +5,7 @@
 }
 
 .login span {
+  font-family: A_black;
   color: #3f4348;
   font-size: 17px;
   font-weight: bold;
@@ -13,6 +14,7 @@
 }
 
 .login p {
+  font-family: A_medium;
   color: #3f4348;
   font-size: 13px;
   margin-bottom: 75px;
@@ -20,6 +22,7 @@
 }
 
 .login button {
+  font-family: A_heavy;
   color: #fff;
   padding: 8px 70px;
   background-color: #2a659c;
@@ -34,6 +37,7 @@
 }
 
 .login a {
+  font-family: A_book;
   font-size: 13px;
   color: #676767;
 }
@@ -50,6 +54,7 @@
 }
 
 .login label {
+  font-family: A_book !important;
   text-transform: none !important;
   font-size: 13px !important;
   color: #676767 !important;
@@ -79,7 +84,7 @@
 }
 
 .login .pretty.p-default input:checked ~ .state label:after {
-  background-color: #2a659c !important;
+  background-color: #2A659C !important;
   top: calc((0% - (100% - 1em)) - -109%);
   width: calc(1em + 4px);
   height: calc(1em + 4px);
