--- a/src/components/builder/adopt/adopt.css
+++ b/src/components/builder/adopt/adopt.css
@@ -35,7 +35,13 @@
   align-items: center;
   justify-content: space-evenly;
 }
+
+.c1{
+  border-radius: 50%;
+  
+}
 .adopt .react-calendar {
+  
   background: #f5f5ef;
   border: none;
   line-height: 0.5em;
