--- a/src/components/builder/start/start.css
+++ b/src/components/builder/start/start.css
@@ -4,6 +4,7 @@
   margin-top: 25px;
   align-items: center;
   text-align: center;
+  color: #3f4348 !important;
 }
 .start h2 {
   margin-top: 40px;
@@ -21,26 +22,70 @@
 }
 
 .start h4 {
-  font-size: 18px;
+  font-size: 16px;
   margin-top: 50px;
+  margin-bottom: 15px;
   text-transform: uppercase;
 }
 .start input {
   outline: none;
   border: none;
   width: 300px;
-  height: 40px;
-  color: #000000;
+  height: 50px;
+  color: #000000 !important;
   background: var(--bg-primary);
   padding: 5px 10px;
   margin-bottom: 50px;
 }
+.start input::placeholder {
+  color: #3f4348 !important;
+  opacity: 0.7 !important;
+}
 
-.custom-select {
-  border: none;
-  border-radius: 0;
+select {
+  font-size: 1rem;
+  padding: 1em 9em 1em 1em;
+  background: #f5f5ef;
   color: #000000;
-  background: #f5f5ef
-    url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='5' viewBox='0 0 4 5'%3e%3cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e")
-    no-repeat right 0.75rem center/8px 10px;
+  border: 0;
+}
+
+.custom-dropdown {
+  position: relative;
+}
+
+.custom-dropdown-arrow {
+  background: #f5f5ef;
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: block;
+  height: 100%;
+  width: 4rem;
+  pointer-events: none;
+}
+.custom-dropdown-arrow::before,
+.custom-dropdown-arrow::after {
+  --size: 0.45em;
+
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 0;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.custom-dropdown-arrow::before {
+  border-left: var(--size) solid transparent;
+  border-right: var(--size) solid transparent;
+  border-bottom: 13px solid #2a649b;
+  top: 35%;
+}
+
+.custom-dropdown-arrow::after {
+  border-left: var(--size) solid transparent;
+  border-right: var(--size) solid transparent;
+  border-top: 13px solid #2a649b;
+  top: 65%;
 }
