--- a/src/components/test.css
+++ b/src/components/test.css
@@ -1,6 +1,5 @@
 .configuration-nav {
   background-color: #f7f7f7;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif !important;
 }
 
 .configuration-nav .top {
@@ -10,14 +9,13 @@
 }
 
 .configuration-nav .top span {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif !important;
+  font-family: A_book;
   color: #0266a1;
-  font-size: 17px;
-  font-weight: 600;
+  font-size: 15px;
 }
 
 .configuration-nav .top p {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif !important;
+  font-family: A_book;
   color: #676767;
   font-size: 12px;
   margin-bottom: 0px;
@@ -30,19 +28,17 @@
   display: flex;
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
-  width: 100% !important;
 }
 
 .configuration-nav a {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif !important;
-  color: #676767 !important;
-  font-weight: 500;
+  font-family: A_light;
+  color: #0266a1;
   text-decoration: none;
   text-transform: uppercase;
   font-size: 14px;
   border: none;
   border-color: #fff;
-  padding: 8px 60px !important;
+  padding: 15px 40px;
   border-top-right-radius: 0px;
   border-top-left-radius: 0px;
 }
