--- a/src/components/builder/adopt/adopt.css
+++ b/src/components/builder/adopt/adopt.css
@@ -61,14 +61,14 @@
 }
 .class .DayPicker-NavButton--prev {
   outline: none !important;
-  margin-right: 40rem;
-  margin-top: 9rem;
+  margin-right: 33rem;
+  margin-top: 7rem;
   size: 20px;
   background-image: url("../../../assets/img/prev.png");
 }
 .class .DayPicker-NavButton--next {
   outline: none !important;
-  margin-top: 9rem;
+  margin-top: 7rem;
   margin-left: 12rem;
   margin-right: -3rem;
   background-image: url("../../../assets/img/next.png");
@@ -83,7 +83,9 @@
 }
 .DayPicker-Caption div {
   font-weight: bold !important;
+  font-size: 1em !important;
 }
 .DayPicker-Day {
   padding: 0.8em !important;
+  font-size: 13px;
 }
