--- a/src/components/builder/create/create.css
+++ b/src/components/builder/create/create.css
@@ -33,9 +33,10 @@
   font-size: 30px;
   margin-left: 15px;
   color: var(--primary-color);
+  font-size: 15px;
 }
 .create-container .create-left .icons .icon span {
-  font-size: 11px;
+  font-size: 9px;
 }
 .create-container .create-left .image {
   width: 65%;
@@ -57,12 +58,12 @@
   display: flex;
 }
 .create-container .create-left .remove-contact .remove-icon p {
-  margin-top: 5px;
   color: #336699;
+  font-size: 12px;
 }
 .create-container .create-left .remove-contact img {
-  width: 30px;
-  height: 30px;
+  width: 20px;
+  height: 20px;
 }
 
 .create-container .create-right {
@@ -83,6 +84,7 @@
   border: none;
   background: transparent;
   padding: 7px 0;
+  font-size: 12px;
 }
 .create-container .create-right .setting-btns .active {
   box-shadow: -1px 1px 3px 0px rgba(48, 50, 50, 0.5) !important;
@@ -125,7 +127,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 50px;
+  margin-bottom: 0;
 }
 
 @media screen and (max-width: 500px) {
