--- a/src/components/navHeader/header.css
+++ b/src/components/navHeader/header.css
@@ -7,8 +7,8 @@
   justify-content: space-between;
 }
 .header img {
-  width: 110px;
-  height: 60px;
+  width: 7vw;
+  height: 7vh;
 }
 
 .header .sign-in {
